# datalabeling

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Dev-plan.md  README.md  build_yolo_dataset.bat  environment_labelstudio.yml  example.env  launch_mlflow_server.bat  mypy.ini  pyproject.toml  requirements-mlflow.txt  requirements-mmdet.txt  requirements-mmrotate-cpu.txt  requirements-mmrotate-cuda.txt  requirements-mmrotate.txt  requirements-ppd.txt  requirements.txt  roadmap.md  run-labelstudio-windows.bat  run-ml-backend-linux.sh  run-ml-backend-windows.bat  run-ml-backend.bat  train_detector.bat  train_identificator.bat
UI/: app.py
configs/: params.yaml
data/: data_config.yaml  dataset_0-1.yaml  dataset_0-2.yaml  dataset_cl.yaml  dataset_conversion.yaml  dataset_identification-detection.yaml  dataset_identification.yaml  dataset_labeler.yaml  dataset_pretraining.yaml
exported_annotations/: label_mapping.json  label_studio_config.xml
helper-scripts/: activate_label-backend_env.bat  build_detector_dataset.bat  build_identification_dataset.bat  build_yolo_dataset.bat  build_yolo_seg_dataset.bat  chaining.bat  compute_validation_metrics.bat  convert_dataset_obb_dota.bat  convert_dataset_yolo_coco.bat  convert_dataset_yolo_obb.bat  export-weights.bat  launch_mlflow_server.bat  launch_ui.bat  register_run_to_mlflow.bat  run-labelstudio-linux.sh  run-labelstudio-windows.bat  run-ml-backend-linux.sh  run-ml-backend-windows.bat  train_detector.bat  train_identificator.bat  train_labeler.bat  train_mmrotate.bat  train_paddlepaddle.bat  train_ppd.bat  upload_predictions.bat  wandb_sweep.bat
ml_microservices/: docker-compose.yml
ml_microservices/inference_service/: .dockerignore  Dockerfile  launch_server.bat  main.py  pyproject.toml  requirements.txt
ml_microservices/inference_service/app/: __init__.py
ml_microservices/inference_service/app/api/: endpoints.py
ml_microservices/inference_service/app/core/: loader.py
ml_microservices/inference_service/app/services/: predictor.py
ml_microservices/inference_service/src/core/: utils.py
ml_microservices/inference_service/src/inference_service/: __init__.py  endpoints.py  predictor.py  utils.py
ml_microservices/inference_service/src/inference_service/core/: loader.py  utils.py
ml_microservices/inference_service/src/inference_service/models/: __init__.py
ml_microservices/inference_service/src/inference_service/services/: predictor.py
ml_microservices/inference_service/src/models/: __init__.py
ml_microservices/inference_service/src/services/: predictor.py
my_ml_backend/: environment_mlbackend.yml  model.py  model_wrapper.py  register_model.py  requirements.txt
notebooks/: data_exploration.ipynb  default_runtime.py  dotav1.py  explainability.ipynb  extra_datasets_creation.ipynb  training_tutorial.ipynb
requirements/: requirements-label_studio.txt  requirements-mlflow.txt  requirements-mmrotate-cpu.txt  requirements-mmrotate-cuda.txt  requirements-ppd-cuda.txt
sourcecode/: pyproject.toml  requirements.txt  setup.py
sourcecode/datalabeling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sourcecode/datalabeling/annotator/: __init__.py  interface.py  models.py
sourcecode/datalabeling/arguments/: __init__.py  arguments.py  logger.py
sourcecode/datalabeling/dataset/: __init__.py  converters.py  handlers.py  sampling.py  strategy.py  utils.py
sourcecode/datalabeling/mlflow/: __init__.py  get_create_mlflow_exp.py  model_wrapper.py
sourcecode/datalabeling/predict/: herdnet.py
sourcecode/datalabeling/preprocessing/: utils.py
sourcecode/datalabeling/train/: __init__.py  herdnet.py  train.py  utils.py  yolo.py
sourcecode/datalabeling/validation/: __init__.py  herdnet.py  yolo.py
src/: arguments.py  cli.py  data_exploration.ipynb  extra_datasets_creation.ipynb  preprocessing.py  sweeps.py  train.py  utils.py
tools/: build_dataset.py  cli.py  demo.py  display_predictions.py  mmrotate_confusion_matrix.py  paddlepaddle.py  register_model.py  train.py  (+11 more)
(+78 files in other folders)
