[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "datalabeling"
version = "0.0.1"
description = ""
authors = [
    {name = "Fadel Seydou and Paul Allin", email = "fadel.seydou@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mlflow = "2.13.2"
datargs = "^1.1.0"
scikit-image = "^0.25.2"
python-dotenv = "^1.0.1"
sahi = "^0.11.20"
geopandas = "^1.0.1"
label-studio-ml = "^1.0.9"
label-studio-sdk = "^1.0.10"
label-studio-converter = "^0.0.59"
redis = "^5.2.1"
rq = "^2.1.0"
ultralytics = "^8.3.83"
dill = "^0.3.9"
wandb = "^0.19.8"
cloudpickle = "^3.1.1"
torch = "^2.6.0"
openpyxl = "^3.1.5"
openmim = "^0.3.9"
ipykernel = "^6.29.5"
