[project]
name = "datalabeling"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fadel Seydou", email = "fadel.seydou@gmail.com" }
]
requires-python = "~=3.11"
dependencies = [
    "datargs>=1.1.0",
    "dotenv>=0.9.9",
    "label-studio-ml>=1.0.9",
    "label-studio-sdk>=1.0.10",
    "label-studio-converter",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.1",
    "mlflow==2.13.2",
    "notebook>=7.3.2",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pillow>=11.1.0",
    "sahi>=0.11.22",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "wandb==0.18.7",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "datalabeling",
    "ruff>=0.9.10",
]

[tool.uv.sources]
datalabeling = { workspace = true }
